--- a/Deployment/PostgreSQL/docker-compose.yml
+++ b/Deployment/PostgreSQL/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             - "5432:5432"
         environment:
             - POSTGRES_PASSWORD=123456
+            - PGDATA=/var/lib/postgresql/data
         volumes:
             - ./dbdata:/var/lib/postgresql/data
             - ./pg_sharedir:/sharedir
